# notify-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/providers/: discord.rs  mod.rs  pushover.rs  slack.rs  telegram.rs
tests/: .env.example  integration_test.rs
tests/common/: mod.rs
